--- a/index.html
+++ b/index.html
@@ -8,21 +8,41 @@
 </head>
 <body>
     <div id="navbar" class="navbar">
-        <button class="menuButton">Menu</button><button class="homeButton">Home</button>
+        <button class="menuButton">Menu</button><a href="https://monoclethe.github.io"><button class="homeButton">Home</button></a>
     </div>
     <div class="gameComponent" id="playArea">
-        <h3>Play Area</h3><br>
-        <div class="elem lightblue" id="0" onclick="set1st(id)" oncontextmenu="set2nd(id);return false;">Air</div>
-        <div class="elem brown" id="1" onclick="set1st(id)" oncontextmenu="set2nd(id);return false;">Earth</div>
-        <div class="elem red" id="2" onclick="set1st(id)" oncontextmenu="set2nd(id);return false;">Fire</div>
-        <div class="elem blue" id="3" onclick="set1st(id)" oncontextmenu="set2nd(id);return false;">Water</div>
+        <div class="playHeader">
+            <h3>Play Area</h3>
+            <span class="elemDisp" id="elemDisp"></span>
+        </div>
+        <br>
+        <div class="elementArea" id="elementArea">
+            <div class="elem lightblue" id="0" onclick="set1st(id)" oncontextmenu="set2nd(id);return false;">Air</div>
+            <div class="elem brown" id="1" onclick="set1st(id)" oncontextmenu="set2nd(id);return false;">Earth</div>
+            <div class="elem red" id="2" onclick="set1st(id)" oncontextmenu="set2nd(id);return false;">Fire</div>
+            <div class="elem blue" id="3" onclick="set1st(id)" oncontextmenu="set2nd(id);return false;">Water</div>
+        </div>
     </div>
     <div class="gameComponent" id="newElems">
         <div class="playHeader">
             <h3>New Elems</h3>
         </div>
+        <div id="newElemsList">
+
+        </div>
     </div>
-    <div id="footer">By Monocle - v a1.0</div>
+    <div id="footer">By Monocle - Version 1.10a</div>
+    <div class="elemCreate" id="elemCreate">
+        <h2>New Element!</h2>
+        <input class="elem" type="text" value="Element Name Here">
+        <select name="colors" id="colorSelect">
+            <option value="red">Red</option>
+            <option value="orangered">Red Orange</option>
+            <option value="brown">Brown</option>
+            <option value="orange">Orange</option>
+            <option value="yellow">Yellow</option>
+        </select>
+    </div>
 </body>
 <script src="index.js"></script>
 </html>
