--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <option value="gray">Gray</option>
             <option value="black">Black</option>
         </select>
-        <input type="button" value="Submit" class="darkButton" onclick="inputElemData()">
+        <input type="button" value="Submit" id="subElem" onclick="inputElemData()">
     </div>
 </body>
 <script src="index.js"></script>
